--- a/css/style.css
+++ b/css/style.css
@@ -541,7 +541,7 @@
 
 .thumbCard-section {
   width: 100%;
-  height: 500px;
+  height: auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -572,13 +572,20 @@
 .thumbCard__description--header {
   width: 100%;
   height: 20%;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
+}
+.thumbCard__description--header > .thumbCard__title {
+  width: 75%;
+  height: 100%;
+}
+.thumbCard__description--header > .thumbCard__time {
+  height: 100%;
 }
 .thumbCard__description--footer {
   height: 80%;
