--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 .container {
   margin: auto;
   padding: 0;
-  max-width: 1240px;
+  max-width: 1290px;
   height: 100vh;
   color: #000000;
   font-family: "Lato", sans-serif;
@@ -112,7 +112,7 @@
   align-items: center;
 }
 .Badge__tagIngredient {
-  width: 122.75px;
+  width: 130px;
   height: 35px;
   margin: 10px;
   margin-right: 15px;
@@ -148,7 +148,7 @@
   align-items: center;
 }
 .Badge__tagAppliance {
-  width: 122.75px;
+  width: 130px;
   height: 35px;
   margin: 10px;
   margin-right: 15px;
@@ -184,7 +184,7 @@
   align-items: center;
 }
 .Badge__tagUstensil {
-  width: 122.75px;
+  width: 130px;
   height: 35px;
   margin: 10px;
   margin-right: 15px;
@@ -251,7 +251,7 @@
 }
 .ingredientDropdown__hidden {
   height: 55px;
-  width: 500px;
+  width: 410px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   display: flex;
@@ -268,7 +268,7 @@
   display: none;
 }
 .ingredientDropdown__hidden--input {
-  width: 455px;
+  width: 365px;
   height: 100%;
   font-size: 16px;
   border: none;
@@ -296,12 +296,14 @@
   display: inline-flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 500px;
+  width: 410px;
   padding-top: 30px;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
-  font-size: 18px;
+  margin-top: -2px;
+  font-size: 16px;
+  font-weight: 500;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   cursor: pointer;
@@ -309,14 +311,14 @@
   background-color: #3282F7;
 }
 .ingredientDropdown__list--allIngredients > .recipesOneElement-Div {
-  width: 160px;
+  width: 130px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   padding-top: 2.5px;
   padding-bottom: 2.5px;
   padding-left: 15px;
-  padding-right: 40px;
+  padding-right: 15px;
   line-height: 30px;
 }
 .ingredientDropdown__list--allIngredients > .recipesOneElement-Div:hover {
@@ -358,7 +360,7 @@
 }
 .applianceDropdown__hidden {
   height: 55px;
-  width: 500px;
+  width: 410px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   display: flex;
@@ -376,7 +378,7 @@
   display: none;
 }
 .applianceDropdown__hidden--input {
-  width: 455px;
+  width: 365px;
   height: 100%;
   font-size: 16px;
   border: none;
@@ -405,12 +407,14 @@
   display: inline-flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 500px;
+  width: 410px;
   padding-top: 30px;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
-  font-size: 18px;
+  margin-top: -2px;
+  font-size: 16px;
+  font-weight: 500;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   cursor: pointer;
@@ -418,14 +422,14 @@
   background-color: #68D9A4;
 }
 .applianceDropdown__list--allAppliances > .recipesOneElement-Div {
-  width: 160px;
+  width: 130px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   padding-top: 2.5px;
   padding-bottom: 2.5px;
   padding-left: 15px;
-  padding-right: 40px;
+  padding-right: 15px;
   line-height: 30px;
 }
 .applianceDropdown__list--allAppliances > .recipesOneElement-Div:hover {
@@ -467,7 +471,7 @@
 }
 .ustensilDropdown__hidden {
   height: 55px;
-  width: 500px;
+  width: 410px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   display: flex;
@@ -485,7 +489,7 @@
   display: none;
 }
 .ustensilDropdown__hidden--input {
-  width: 455px;
+  width: 365px;
   height: 100%;
   font-size: 16px;
   border: none;
@@ -514,12 +518,14 @@
   display: inline-flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 500px;
+  width: 410px;
   padding-top: 30px;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
-  font-size: 18px;
+  margin-top: -2px;
+  font-size: 16px;
+  font-weight: 500;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   cursor: pointer;
@@ -527,14 +533,14 @@
   background-color: #ED6454;
 }
 .ustensilDropdown__list--allUstensils > .recipesOneElement-Div {
-  width: 160px;
+  width: 130px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   padding-top: 2.5px;
   padding-bottom: 2.5px;
   padding-left: 15px;
-  padding-right: 40px;
+  padding-right: 15px;
   line-height: 30px;
 }
 .ustensilDropdown__list--allUstensils > .recipesOneElement-Div:hover {
@@ -556,10 +562,10 @@
 }
 
 .thumbCard {
-  width: 380px;
-  height: 364px;
+  width: 400px;
+  height: 400px;
   border-radius: 5px;
-  margin-bottom: 50px;
+  margin-bottom: 45px;
   display: flex;
   flex-direction: column;
 }
@@ -577,7 +583,7 @@
   background-color: #E7E7E7;
 }
 .thumbCard__description--header {
-  width: 100%;
+  width: 95%;
   height: 20%;
   font-size: 16px;
   font-weight: bold;
@@ -586,6 +592,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
+  margin-left: 10px;
 }
 .thumbCard__description--header > .thumbCard__title {
   width: 75%;
@@ -596,22 +603,26 @@
 }
 .thumbCard__description--footer {
   height: 80%;
+  width: 100%;
+  padding-bottom: 10px;
   display: flex;
   flex-direction: row;
 }
-
-.thumbCard__listOfCondiments {
+.thumbCard__description--footer > .thumbCard__listOfCondiments {
   width: 50%;
   height: 100%;
   font-size: 12px;
-  margin-right: 10px;
+  margin-left: 10px;
 }
-
-.thumbCard__howToUse {
+.thumbCard__description--footer > .thumbCard__listOfCondiments > ul {
+  list-style-type: none;
+}
+.thumbCard__description--footer > .thumbCard__howToUse {
   width: 50%;
   height: 100%;
   font-size: 12px;
-  margin-left: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
   overflow-y: auto;
 }
 
