--- a/sass/layouts/_thumdCard.scss
+++ b/sass/layouts/_thumdCard.scss
@@ -9,10 +9,10 @@
 }
 
 .thumbCard {
-    width: 380px;
-    height: 364px;
+    width: 400px;
+    height: 400px;
     border-radius: 5px;
-    margin-bottom: 50px;
+    margin-bottom: 45px;
     display: flex;
     flex-direction: column;
     &__img {
@@ -28,7 +28,7 @@
         border-radius: 0px 0px 5px 5px;
         background-color: $cd-color-primary;
         &--header {
-            width: 100%;
+            width: 95%;
             height: 20%;
             font-size: 16px;
             font-weight: bold;
@@ -37,6 +37,7 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 10px;
+            margin-left: 10px;
 
             & > .thumbCard__title {
                 width: 75%;
@@ -49,23 +50,30 @@
         }
         &--footer {
             height: 80%;
+            width: 100%;
+            padding-bottom: 10px;
             display: flex;
             flex-direction: row;
+
+            & > .thumbCard__listOfCondiments {
+                width: 50%;
+                height: 100%;
+                font-size: 12px;
+                margin-left: 10px;
+
+                & > ul {
+                    list-style-type: none;
+                }
+            }
+
+            & > .thumbCard__howToUse {
+                width: 50%;
+                height: 100%;
+                font-size: 12px;
+                margin-left: 10px;
+                margin-right: 10px;
+                overflow-y: auto;
+            }
         }
     }
-}
-
-.thumbCard__listOfCondiments {
-    width: 50%;
-    height: 100%;
-    font-size: 12px;
-    margin-right: 10px;
-}
-
-.thumbCard__howToUse {
-    width: 50%;
-    height: 100%;
-    font-size: 12px;
-    margin-left: 5px;
-    overflow-y: auto;
 }
