Ajout boîte messagerie numbre de recettes par saisies utilisateur

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,3 +6,5 @@ $cd-color-appliance: #68D9A4;
 $cd-color-ustensil: #ED6454;
 $cd-color-accent: #FFFFFF;
 $cd-color-default: #000000;
+$cd-color-validRecipesFund: #b5dbf1;
+$cd-color-noValidRecipesFund: #ebdb97;
