--- a/css/style.css
+++ b/css/style.css
@@ -57,11 +57,46 @@
   margin-bottom: 20px;
 }
 
+.resultBox {
+  width: 100%;
+  height: 35px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  display: none;
+}
+.resultBox__validRecipesCount {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  font-size: 16px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.resultBox__validRecipesCount--message {
+  padding-left: 15px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.resultBox__validRecipesCount--closeCross {
+  margin-right: 10px;
+  margin-left: 10px;
+  padding-left: 2.5px;
+  padding-top: 5px;
+  width: 20px;
+  height: 25px;
+}
+.resultBox__validRecipesCount--closeCross:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+
 .searchBar {
   width: 100%;
   height: 50px;
   border-radius: 5px;
-  margin-bottom: 20px;
 }
 .searchBar__form {
   position: relative;
@@ -88,7 +123,6 @@
 }
 .searchBar__form--icon {
   position: absolute;
-  cursor: pointer;
   font-size: 20px;
   width: 45px;
   height: 100%;
@@ -529,7 +563,7 @@
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   cursor: pointer;
-  height: 365px;
+  height: 360px;
   background-color: #ED6454;
 }
 .ustensilDropdown__list--allUstensils > .recipesOneElement-Div {
