--- a/sass/layouts/_searchBadgeDrop.scss
+++ b/sass/layouts/_searchBadgeDrop.scss
@@ -6,12 +6,54 @@
 }
 
 //+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+
+//Valid recipes count
+.resultBox {
+    width: 100%;
+    height: 35px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    display: none;
+
+    &__validRecipesCount {
+        width: 100%;
+        height: 100%;
+        border-radius: 5px;
+        font-size: 16px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    
+        &--message {
+            padding-left: 15px;
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
+        }
+    
+        &--closeCross {
+            margin-right: 10px;
+            margin-left: 10px;
+            padding-left: 2.5px;
+            padding-top: 5px;
+            width: 20px;
+            height: 25px;
+    
+            &:hover {
+                transform: scale(1.05);
+                cursor: pointer;
+            }
+        }
+    }
+}
+
+
+//+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+
 //Search Bar
 .searchBar {
     width: 100%;
     height: 50px;
     border-radius: 5px;
-    margin-bottom: 20px;
     &__form {
         position: relative;
         width: 100%;
@@ -36,7 +78,6 @@
         }
         &--icon {
             position: absolute;
-            cursor: pointer;
             font-size: 20px;
             width: 45px;
             height: 100%;
@@ -298,7 +339,7 @@
         margin-left: 30px;
         &--allUstensils {
             @include recipesElementsListCommonParameter;
-            height: 365px;
+            height: 360px;
             background-color: $cd-color-ustensil;
 
             & > .recipesOneElement-Div {
