--- a/css/style.css
+++ b/css/style.css
@@ -10,33 +10,13 @@
 .container {
   margin: auto;
   padding: 0;
-  max-width: 1290px;
+  max-width: 1320px;
   height: 100vh;
   color: #000000;
   font-family: "Lato", sans-serif;
   font-style: normal;
   display: flex;
   flex-direction: column;
-}
-
-.pl-30-custom {
-  padding-left: 30px;
-}
-
-.box-filter {
-  height: 250px;
-  overflow: scroll;
-}
-
-.box-display {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.recipe-box {
-  height: 250px;
-  overflow: scroll;
 }
 
 .header {
@@ -55,6 +35,8 @@
   width: 100%;
   height: auto;
   margin-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .resultBox {
@@ -79,6 +61,9 @@
   padding-left: 15px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .resultBox__validRecipesCount--closeCross {
   margin-right: 10px;
@@ -91,11 +76,14 @@
 .resultBox__validRecipesCount--closeCross:hover {
   transform: scale(1.1);
   cursor: pointer;
+  font-weight: 600;
+  transition: 300ms;
 }
 
 .searchBar {
   width: 100%;
   height: 50px;
+  margin-bottom: 10px;
   border-radius: 5px;
 }
 .searchBar__form {
@@ -108,7 +96,7 @@
 }
 .searchBar__form--input {
   width: 100%;
-  padding-left: 20px;
+  padding-left: 15px;
   padding-right: 40px;
   font-size: 15px;
   border-radius: 5px;
@@ -116,6 +104,9 @@
   font-style: normal;
   background-color: #E7E7E7;
   border: 2px solid #E7E7E7;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .searchBar__form--input:focus {
   outline: none !important;
@@ -134,7 +125,7 @@
 .badgeBox {
   width: 100%;
   height: auto;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .Badge {
@@ -407,7 +398,7 @@
   font-style: normal;
   color: #FFFFFF;
   border: none;
-  margin-left: 30px;
+  margin-left: 25px;
   margin-top: -55px;
   background-color: #68D9A4;
   display: none;
@@ -436,7 +427,7 @@
 .applianceDropdown__list {
   position: absolute;
   display: none;
-  margin-left: 30px;
+  margin-left: 25px;
 }
 .applianceDropdown__list--allAppliances {
   display: flex;
@@ -519,7 +510,7 @@
   font-style: normal;
   color: #FFFFFF;
   border: none;
-  margin-left: 30px;
+  margin-left: 25px;
   margin-top: -55px;
   background-color: #ED6454;
   display: none;
@@ -548,7 +539,7 @@
 .ustensilDropdown__list {
   position: absolute;
   display: none;
-  margin-left: 30px;
+  margin-left: 25px;
 }
 .ustensilDropdown__list--allUstensils {
   display: flex;
@@ -595,14 +586,16 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .thumbCard {
   width: 400px;
   height: 400px;
   border-radius: 5px;
-  margin-bottom: 45px;
+  margin-bottom: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
   display: flex;
   flex-direction: column;
 }
