--- a/sass/layouts/_thumdCard.scss
+++ b/sass/layouts/_thumdCard.scss
@@ -5,28 +5,33 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .thumbCard {
     width: 400px;
     height: 400px;
     border-radius: 5px;
-    margin-bottom: 45px;
+    margin-bottom: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
     display: flex;
     flex-direction: column;
+
     &__img {
         width: 100%;
         height: 50%;
         border-radius: 5px 5px 0px 0px;
         background-color: $cd-color-secondary;
     }
+
     &__description {
         width: 100%;
         height: 50%;
         padding: 10px;
         border-radius: 0px 0px 5px 5px;
         background-color: $cd-color-primary;
+        
         &--header {
             width: 95%;
             height: 20%;
@@ -48,6 +53,7 @@
                 height: 100%;
             }
         }
+
         &--footer {
             height: 80%;
             width: 100%;
