--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,13 @@
 .resultBox__validRecipesCount--closeCross {
   margin-right: 10px;
   margin-left: 10px;
-  padding-left: 2.5px;
-  padding-top: 5px;
+  padding-left: 2px;
+  padding-top: 2px;
   width: 20px;
-  height: 25px;
+  height: 20px;
+  border-radius: 2.5px;
+  justify-self: center;
+  align-self: center;
 }
 .resultBox__validRecipesCount--closeCross:hover {
   transform: scale(1.1);
