--- a/sass/layouts/_searchBadgeDrop.scss
+++ b/sass/layouts/_searchBadgeDrop.scss
@@ -39,16 +39,19 @@
         &--closeCross {
             margin-right: 10px;
             margin-left: 10px;
-            padding-left: 2.5px;
-            padding-top: 5px;
+            padding-left: 2px;
+            padding-top: 2px;
             width: 20px;
-            height: 25px;
+            height: 20px;
+            border-radius: 2.5px;
+            justify-self: center;
+            align-self: center;
     
             &:hover {
                 transform: scale(1.1);
                 cursor: pointer;
                 font-weight: 600; 
-                transition: 300ms;
+                transition: 300ms; 
             }
         }
     }
