--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,6 @@
   color: #FFFFFF;
   border: none;
   background-color: #3282F7;
-  margin-top: -55px;
   display: none;
 }
 .ingredientDropdown__hidden--input {
@@ -402,7 +401,6 @@
   color: #FFFFFF;
   border: none;
   margin-left: 25px;
-  margin-top: -55px;
   background-color: #68D9A4;
   display: none;
 }
@@ -451,7 +449,7 @@
   max-height: 190px;
   background-color: #68D9A4;
 }
-.applianceDropdown__list--allAppliances > .recipesOneElement-Div {
+.applianceDropdown__list--allAppliances > .recipesOneElement-Div, .applianceDropdown__list--allAppliances .selectedAppliance {
   width: 130px;
   white-space: nowrap;
   overflow: hidden;
@@ -514,7 +512,6 @@
   color: #FFFFFF;
   border: none;
   margin-left: 25px;
-  margin-top: -55px;
   background-color: #ED6454;
   display: none;
 }
