--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,9 @@
   display: flex;
   flex-direction: column;
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 400px) {
   .container {
-    max-width: 800px;
+    max-width: 400px;
     background-color: aqua;
   }
 }
@@ -35,6 +35,16 @@
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+}
+@media screen and (max-width: 400px) {
+  .header__logo {
+    height: 70px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .header {
+    margin-top: 20px;
+  }
 }
 
 .SearchBadgeDropdown {
@@ -253,7 +263,7 @@
   flex-direction: row;
   align-items: flex-start;
   color: #FFFFFF;
-  position: relative;
+  position: absolute;
 }
 
 .ingredientDropdown {
@@ -278,16 +288,31 @@
   cursor: pointer;
   background-color: #3282F7;
 }
+@media screen and (max-width: 400px) {
+  .ingredientDropdown__openBtn {
+    margin-bottom: 20px;
+  }
+}
 .ingredientDropdown__openBtn:hover {
   background: #085bd4;
   transition: linear 300ms;
   border: none;
 }
-.ingredientDropdown__hidden {
-  height: 55px;
+.ingredientDropdown__hiddenElt {
   width: 453px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  border-radius: 5px;
+  font-size: 15px;
+  font-family: "Lato", sans-serif;
+  font-style: normal;
+  color: #FFFFFF;
+  border: none;
+  background-color: #3282F7;
+  max-height: 1505px;
+  display: none;
+}
+.ingredientDropdown__hiddenElt--header {
+  width: 100%;
+  height: 55px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -297,23 +322,20 @@
   font-style: normal;
   color: #FFFFFF;
   border: none;
-  background-color: #3282F7;
-  display: none;
 }
-.ingredientDropdown__hidden--input {
+.ingredientDropdown__hiddenElt--header > .specificSearch-input {
   width: 408px;
   height: 100%;
   font-size: 16px;
   border: none;
   padding-left: 25px;
   border-top-left-radius: 5px;
-  background-color: #3282F7;
 }
-.ingredientDropdown__hidden--input:focus {
+.ingredientDropdown__hiddenElt--header > .specificSearch-input:focus {
   outline: none !important;
   color: #FFFFFF;
 }
-.ingredientDropdown__hidden--closeChevron {
+.ingredientDropdown__hiddenElt--header > .hiddenElt-closeChevron {
   width: 40px;
   height: 100%;
   padding-top: 20px;
@@ -321,30 +343,24 @@
   border-top-right-radius: 5px;
   cursor: pointer;
 }
-.ingredientDropdown__list {
-  display: none;
-  position: absolute;
+.ingredientDropdown__hiddenElt--header > .specificSearch-input {
+  background-color: #3282F7;
 }
-.ingredientDropdown__list--allIngredients {
-  max-height: 1450px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  width: 453px;
+.ingredientDropdown__hiddenElt--footer {
   padding-top: 30px;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
-  margin-top: -2px;
   font-size: 16px;
   font-weight: 500;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  cursor: pointer;
-  background-color: #3282F7;
 }
-.ingredientDropdown__list--allIngredients > .recipesOneElement-Div {
+.ingredientDropdown__hiddenElt--footer > .typeOfElement-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.ingredientDropdown__hiddenElt--footer > .typeOfElement-list > .recipesOneElement-Div {
   width: 144px;
   white-space: nowrap;
   overflow: hidden;
@@ -354,12 +370,21 @@
   padding-left: 15px;
   padding-right: 15px;
   line-height: 30px;
+  cursor: pointer;
 }
-.ingredientDropdown__list--allIngredients > .recipesOneElement-Div:hover {
+@media screen and (max-width: 400px) {
+  .ingredientDropdown__hiddenElt--footer > .typeOfElement-list > .recipesOneElement-Div {
+    width: 30%;
+    line-height: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+.ingredientDropdown__hiddenElt--footer > .typeOfElement-list > .recipesOneElement-Div:hover {
   color: #3282F7;
   background-color: #FFFFFF;
 }
-.ingredientDropdown__list--allIngredients > .line-through {
+.ingredientDropdown__hiddenElt--footer > .typeOfElement-list > .line-through {
   text-decoration: line-through;
   cursor: not-allowed;
 }
@@ -387,16 +412,37 @@
   background-color: #68D9A4;
   margin-left: 30px;
 }
+@media screen and (max-width: 400px) {
+  .applianceDropdown__openBtn {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .applianceDropdown__openBtn {
+    margin-left: 0px;
+  }
+}
 .applianceDropdown__openBtn:hover {
   background: #31c37f;
   transition: linear 300ms;
   border: none;
 }
-.applianceDropdown__hidden {
-  height: 55px;
+.applianceDropdown__hiddenElt {
   width: 453px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  border-radius: 5px;
+  font-size: 15px;
+  font-family: "Lato", sans-serif;
+  font-style: normal;
+  color: #FFFFFF;
+  border: none;
+  background-color: #68D9A4;
+  max-height: 245px;
+  margin-left: 30px;
+  display: none;
+}
+.applianceDropdown__hiddenElt--header {
+  width: 100%;
+  height: 55px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -406,24 +452,20 @@
   font-style: normal;
   color: #FFFFFF;
   border: none;
-  margin-left: 25px;
-  background-color: #68D9A4;
-  display: none;
 }
-.applianceDropdown__hidden--input {
+.applianceDropdown__hiddenElt--header > .specificSearch-input {
   width: 408px;
   height: 100%;
   font-size: 16px;
   border: none;
   padding-left: 25px;
   border-top-left-radius: 5px;
-  background-color: #68D9A4;
 }
-.applianceDropdown__hidden--input:focus {
+.applianceDropdown__hiddenElt--header > .specificSearch-input:focus {
   outline: none !important;
   color: #FFFFFF;
 }
-.applianceDropdown__hidden--closeChevron {
+.applianceDropdown__hiddenElt--header > .hiddenElt-closeChevron {
   width: 40px;
   height: 100%;
   padding-top: 20px;
@@ -431,31 +473,24 @@
   border-top-right-radius: 5px;
   cursor: pointer;
 }
-.applianceDropdown__list {
-  position: absolute;
-  display: none;
-  margin-left: 25px;
+.applianceDropdown__hiddenElt--header > .specificSearch-input {
+  background-color: #68D9A4;
 }
-.applianceDropdown__list--allAppliances {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  width: 453px;
+.applianceDropdown__hiddenElt--footer {
   padding-top: 30px;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
-  margin-top: -2px;
   font-size: 16px;
   font-weight: 500;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  cursor: pointer;
-  max-height: 190px;
-  background-color: #68D9A4;
 }
-.applianceDropdown__list--allAppliances > .recipesOneElement-Div, .applianceDropdown__list--allAppliances .selectedAppliance {
+.applianceDropdown__hiddenElt--footer > .typeOfElement-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.applianceDropdown__hiddenElt--footer > .typeOfElement-list > .recipesOneElement-Div {
   width: 144px;
   white-space: nowrap;
   overflow: hidden;
@@ -465,12 +500,21 @@
   padding-left: 15px;
   padding-right: 15px;
   line-height: 30px;
+  cursor: pointer;
 }
-.applianceDropdown__list--allAppliances > .recipesOneElement-Div:hover {
+@media screen and (max-width: 400px) {
+  .applianceDropdown__hiddenElt--footer > .typeOfElement-list > .recipesOneElement-Div {
+    width: 30%;
+    line-height: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+.applianceDropdown__hiddenElt--footer > .typeOfElement-list > .recipesOneElement-Div:hover {
   color: #68D9A4;
   background-color: #FFFFFF;
 }
-.applianceDropdown__list--allAppliances > .line-through {
+.applianceDropdown__hiddenElt--footer > .typeOfElement-list > .line-through {
   text-decoration: line-through;
   cursor: not-allowed;
 }
@@ -498,16 +542,37 @@
   background-color: #ED6454;
   margin-left: 30px;
 }
+@media screen and (max-width: 400px) {
+  .ustensilDropdown__openBtn {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .ustensilDropdown__openBtn {
+    margin-left: 0px;
+  }
+}
 .ustensilDropdown__openBtn:hover {
   background: #dd2c17;
   transition: linear 300ms;
   border: none;
 }
-.ustensilDropdown__hidden {
-  height: 55px;
+.ustensilDropdown__hiddenElt {
   width: 453px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  border-radius: 5px;
+  font-size: 15px;
+  font-family: "Lato", sans-serif;
+  font-style: normal;
+  color: #FFFFFF;
+  border: none;
+  background-color: #ED6454;
+  max-height: 415px;
+  margin-left: 30px;
+  display: none;
+}
+.ustensilDropdown__hiddenElt--header {
+  width: 100%;
+  height: 55px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -517,24 +582,20 @@
   font-style: normal;
   color: #FFFFFF;
   border: none;
-  margin-left: 25px;
-  background-color: #ED6454;
-  display: none;
 }
-.ustensilDropdown__hidden--input {
+.ustensilDropdown__hiddenElt--header > .specificSearch-input {
   width: 408px;
   height: 100%;
   font-size: 16px;
   border: none;
   padding-left: 25px;
   border-top-left-radius: 5px;
-  background-color: #ED6454;
 }
-.ustensilDropdown__hidden--input:focus {
+.ustensilDropdown__hiddenElt--header > .specificSearch-input:focus {
   outline: none !important;
   color: #FFFFFF;
 }
-.ustensilDropdown__hidden--closeChevron {
+.ustensilDropdown__hiddenElt--header > .hiddenElt-closeChevron {
   width: 40px;
   height: 100%;
   padding-top: 20px;
@@ -542,31 +603,24 @@
   border-top-right-radius: 5px;
   cursor: pointer;
 }
-.ustensilDropdown__list {
-  position: absolute;
-  display: none;
-  margin-left: 25px;
+.ustensilDropdown__hiddenElt--header > .specificSearch-input {
+  background-color: #ED6454;
 }
-.ustensilDropdown__list--allUstensils {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  width: 453px;
+.ustensilDropdown__hiddenElt--footer {
   padding-top: 30px;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
-  margin-top: -2px;
   font-size: 16px;
   font-weight: 500;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  cursor: pointer;
-  max-height: 360px;
-  background-color: #ED6454;
 }
-.ustensilDropdown__list--allUstensils > .recipesOneElement-Div {
+.ustensilDropdown__hiddenElt--footer > .typeOfElement-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.ustensilDropdown__hiddenElt--footer > .typeOfElement-list > .recipesOneElement-Div {
   width: 144px;
   white-space: nowrap;
   overflow: hidden;
@@ -576,12 +630,21 @@
   padding-left: 15px;
   padding-right: 15px;
   line-height: 30px;
+  cursor: pointer;
 }
-.ustensilDropdown__list--allUstensils > .recipesOneElement-Div:hover {
+@media screen and (max-width: 400px) {
+  .ustensilDropdown__hiddenElt--footer > .typeOfElement-list > .recipesOneElement-Div {
+    width: 30%;
+    line-height: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+.ustensilDropdown__hiddenElt--footer > .typeOfElement-list > .recipesOneElement-Div:hover {
   color: #ED6454;
   background-color: #FFFFFF;
 }
-.ustensilDropdown__list--allUstensils > .line-through {
+.ustensilDropdown__hiddenElt--footer > .typeOfElement-list > .line-through {
   text-decoration: line-through;
   cursor: not-allowed;
 }
@@ -593,6 +656,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
+  margin-top: 65px;
 }
 
 .thumbCard {
@@ -604,6 +668,12 @@
   margin-right: 20px;
   display: flex;
   flex-direction: column;
+}
+@media screen and (max-width: 400px) {
+  .thumbCard {
+    height: 320px;
+    margin-bottom: 20px;
+  }
 }
 .thumbCard__img {
   width: 100%;
@@ -630,6 +700,11 @@
   margin-bottom: 10px;
   margin-left: 10px;
 }
+@media screen and (max-width: 400px) {
+  .thumbCard__description--header {
+    font-size: 13px;
+  }
+}
 .thumbCard__description--header > .thumbCard__title {
   width: 75%;
   height: 100%;
@@ -653,6 +728,14 @@
 .thumbCard__description--footer > .thumbCard__listOfCondiments > ul {
   list-style-type: none;
 }
+@media screen and (max-width: 400px) {
+  .thumbCard__description--footer > .thumbCard__listOfCondiments {
+    -webkit-line-clamp: 7;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+}
 .thumbCard__description--footer > .thumbCard__howToUse {
   width: 50%;
   height: 100%;
@@ -664,7 +747,15 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 400px) {
+  .thumbCard__description--footer > .thumbCard__howToUse {
+    -webkit-line-clamp: 7;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+}
+@media screen and (max-width: 400px) {
   .thumbCard {
     max-width: 100%;
   }
