--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,4 +1,4 @@
-//Paramètres des tags
+//Paramètres des badges (tags) _1
 @mixin badge-base-parameter {
     width: 100%;
     height: auto;
@@ -8,7 +8,7 @@
     align-items: center;
 }
 
-//Paramètres des tags
+//Paramètres des tags _2
 @mixin badge-tags-parameter {
     width: 130px;
     height: 35px;
@@ -23,13 +23,13 @@
 }
 
 // Drop down
-@mixin dropdown-CommonParameters {
+@mixin dropdown-common {
     width: auto;
     height: auto;
 }
 
 //Paramètres des boutons d'ouverture de la liste des recettes
-@mixin dropdownBtn-CommonParameters {
+@mixin dropdown-Btn-common {
     padding-left: 15px;
     padding-right: 15px;
     height: 55px;
@@ -45,14 +45,27 @@
     color: $cd-color-accent;
     border: none;
     cursor: pointer;
+
+    @include media-inf-400px {
+        margin-bottom: 20px;
+    }
 }
 
 //Paramètres du panel de la liste des recettes
-@mixin dropdownHidden-CommonParameters {
-    height: 55px;
+@mixin dropdown-Hidden-common {
     width: 453px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-radius: 5px;
+    font-size: 15px;
+    font-family: 'Lato', sans-serif;
+    font-style: normal;
+    color: $cd-color-accent;
+    border: none;
+}
+
+//Paramètres de l'en-tête des éléments cachés
+@mixin hiddenElt-header-common {
+    width: 100%;
+    height: 55px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -62,25 +75,46 @@
     font-style: normal;
     color: $cd-color-accent;
     border: none;
+
+    & > .specificSearch-input {
+        width: 408px;
+        height: 100%;
+        font-size: 16px;
+        border: none;
+        padding-left: 25px;
+        border-top-left-radius: 5px;
+    
+        &:focus {
+            outline: none !important;
+            color: $cd-color-accent;
+        }
+    }
+
+    & > .hiddenElt-closeChevron {
+        width: 40px;
+        height: 100%;
+        padding-top: 20px;
+        padding-left: 10px;
+        border-top-right-radius: 5px;
+        cursor: pointer;   
+    }
 }
 
 //Paramètres des éléments de la liste des recettes
-@mixin recipesElementsListCommonParameter {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    width: 453px;
+@mixin recipes-ElementsDisplay-common {
     padding-top: 30px;
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
-    margin-top: -2px;
     font-size: 16px;
     font-weight: 500;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    cursor: pointer;
+
+    & > .typeOfElement-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
 }
 
 //Paramètres des éléments des "Div" de la liste des recettes
@@ -94,29 +128,12 @@
     padding-left: 15px;
     padding-right: 15px;
     line-height: 30px;
-}
-
-//Paramètres "Input" de la liste des recettes
-@mixin recipesElementsList-Input {
-    width: 408px;
-    height: 100%;
-    font-size: 16px;
-    border: none;
-    padding-left: 25px;
-    border-top-left-radius: 5px;
-
-    &:focus {
-        outline: none !important;
-        color: $cd-color-accent;
-    }
-}
-
-//Paramètres du chevron de fermeture de la liste des recettes
-@mixin recipesElementsList-closeChevron {
-    width: 40px;
-    height: 100%;
-    padding-top: 20px;
-    padding-left: 10px;
-    border-top-right-radius: 5px;
     cursor: pointer;
+
+    @include media-inf-400px {
+        width: 30%;
+        line-height: 20px; 
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 }
